added some styling

--- a/myfile.html
+++ b/myfile.html
@@ -13,20 +13,21 @@
         </h1>
     </header>
         <img src="myfile.png"/>
-        <h1 id="secondHeading">
-            Paragraph 1
-        </h1>
-    <p>
-        This is my Html document
-        <ul>
-            <li>First point</li>
-            <li>Second Point</li>
-        </ul>
-    </p>
-        <h1 id="thirdHeading">Paragraph 2</h1>
-    <p>
+        <h1 class="subHeading">Paragraph 1</h1>
+        <div id="divone">
+          <p>
+             This is my Html document
+         </p>
+         <ul>
+            <li> This is styled </li>
+         </ul>
+        </div>
+        <h1 class="subHeading">Paragraph 2</h1>
+        <div id="divtwo">
+         <p>
         It contains two sections
-    </p>
+        </p>
+        </div>
     <a href="https://www.google.com">Go to google</a>
 </body>
 
